[package]
name = "stegjs"
version = "3.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.11", default-features = false, features = ["napi4"] }
napi-derive = "2.16.12"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"