[package]
authors     = ["Andrey Medvedev <a.medvedev@me.com>"]
categories  = ["multimedia::images", "text-processing", "algorithms"]
description = "Encrypt message to PNG image using steganography"
edition     = "2021"
keywords    = ["steganography", "image", "text", "nodejs", "napi"]
license     = "MIT"
name        = "stegjs"
readme      = "README.md"
repository  = "https://github.com/andmev/stegjs"
version     = "3.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
clap = { version = "4.5.18", features = ["derive"] }
image = "0.25.2"
napi = { version = "2.16.11", default-features = false, features = [
  "napi4",
  "async",
] }
napi-derive = "2.16.12"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"

[dev-dependencies]
tempfile = "3.12.0"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto   = true
strip = "symbols"